@@ -15,22 +15,10 @@ class PersonneTest {
 
     @BeforeEach
     void setUp() throws SQLException {
-        // Configure DBConnection pour pointer vers la base de test
         DBConnection.setNomDB("test_active_records");
         connection = DBConnection.getInstance().getConnection();
+        Personne.createTable(connection);
 
-        // Crée la table Personne
-        String createTableSQL = """
-                CREATE TABLE IF NOT EXISTS Personne (
-                    id INT AUTO_INCREMENT PRIMARY KEY,
-                    nom VARCHAR(50) NOT NULL,
-                    prenom VARCHAR(50) NOT NULL
-                );
-                """;
-        PreparedStatement createTable = connection.prepareStatement(createTableSQL);
-        createTable.execute();
-
-        // Insère les données de test
         String insertDataSQL = """
                 INSERT INTO Personne (nom, prenom) VALUES
                 ('Spielberg', 'Steven'),
@@ -47,8 +35,8 @@ class PersonneTest {
         ArrayList<Personne> personnes = Personne.findAll();
         assertNotNull(personnes);
         assertEquals(4, personnes.size());
-        assertEquals("Spielberg", personnes.get(0).getNom());
-        assertEquals("Steven", personnes.get(0).getPrenom());
+        assertEquals("Spielberg", personnes.getFirst().getNom());
+        assertEquals("Steven", personnes.getFirst().getPrenom());
     }
 
     @Test
@@ -69,13 +57,10 @@ class PersonneTest {
 
     @AfterEach
     void tearDown() throws SQLException {
-        // Supprime les données de la table Personne
         String deleteDataSQL = "DELETE FROM Personne;";
         PreparedStatement deleteData = connection.prepareStatement(deleteDataSQL);
         deleteData.execute();
 
-        String dropTableSQL = "DROP TABLE IF EXISTS Personne;";
-        PreparedStatement dropTable = connection.prepareStatement(dropTableSQL);
-        dropTable.execute();
+        Personne.dropTable(connection);
     }
 }
